--- a/package.json
+++ b/package.json
@@ -10,15 +10,31 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "ag-grid-community": "^21.1.0",
+    "ag-grid-enterprise": "^21.1.0",
+    "ag-grid-vue": "^21.1.0",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link": "^1.2.12",
+    "apollo-link-http": "^1.5.15",
+    "apollo-link-ws": "^1.0.18",
+    "apollo-utilities": "^1.3.2",
     "core-js": "^2.6.5",
+    "graphql": "^14.3.1",
+    "graphql-tag": "^2.10.1",
+    "lodash": "^4.17.14",
+    "subscriptions-transport-ws": "^0.9.16",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
+    "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/graphql": "^14.2.3",
     "@types/jest": "^23.1.4",
+    "@types/lodash": "^4.14.136",
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-e2e-cypress": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
@@ -36,6 +52,8 @@
     "sass-loader": "^7.1.0",
     "ts-jest": "^23.0.0",
     "typescript": "^3.4.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^0.6.1",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.2.2"
   }
 }
