--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vue-router": "^3.0.3",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.0.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-simple": "^2.1.1"
   },
   "devDependencies": {
     "@types/graphql": "^14.2.3",
