--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/graphql": "^14.2.3",
     "@types/jest": "^23.1.4",
     "@types/lodash": "^4.14.136",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-e2e-cypress": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
@@ -49,9 +50,11 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
-    "eslint": "^5.16.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.2.3",
     "prettier": "^1.18.2",
