--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.6.5",
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
+    "list-to-tree-lite": "^0.1.0",
     "lodash": "^4.17.14",
     "subscriptions-transport-ws": "^0.9.16",
     "vue": "^2.6.10",
