--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "apollo-link-ws": "^1.0.18",
     "apollo-utilities": "^1.3.2",
     "core-js": "^2.6.5",
-    "graphql": "^14.3.1",
+    "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "list-to-tree-lite": "^0.1.0",
     "lodash": "^4.17.14",
+    "node-fetch": "^2.6.0",
+    "proxy-agent": "^3.1.0",
     "subscriptions-transport-ws": "^0.9.16",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
