--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@sentry/browser": "^5.6.2",
+    "@sentry/integrations": "^5.6.1",
     "@types/vuelidate": "^0.7.5",
     "ag-grid-community": "^21.1.0",
     "ag-grid-enterprise": "^21.1.0",
@@ -41,6 +43,7 @@
     "@types/graphql": "^14.2.3",
     "@types/jest": "^23.1.4",
     "@types/lodash": "^4.14.136",
+    "@types/ws": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-e2e-cypress": "^3.10.0",
@@ -49,13 +52,14 @@
     "@vue/cli-plugin-unit-jest": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
@@ -64,6 +68,8 @@
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "ts-jest": "^23.0.0",
+    "typedoc": "^0.15.0",
+    "typedoc-plugin-markdown": "^2.1.4",
     "typescript": "^3.6.1-rc",
     "vue-cli-plugin-vuetify": "^0.6.1",
     "vue-template-compiler": "^2.6.10",
