--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx", "src/apollotesting.js"
+    "tests/**/*.tsx",
   ],
   "exclude": [
     "node_modules"
