--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@sentry/browser": "^5.6.2",
-    "@sentry/integrations": "^5.6.1",
+    "@types/splitpanes": "^1.0.0",
     "@types/vuelidate": "^0.7.5",
     "ag-grid-community": "^21.1.0",
     "ag-grid-enterprise": "^21.1.0",
@@ -25,10 +24,10 @@
     "core-js": "^2.6.5",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
-    "list-to-tree-lite": "^0.1.0",
     "lodash": "^4.17.14",
     "node-fetch": "^2.6.0",
     "proxy-agent": "^3.1.0",
+    "splitpanes": "^1.14.5",
     "subscriptions-transport-ws": "^0.9.16",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
@@ -45,6 +44,7 @@
     "@types/lodash": "^4.14.136",
     "@types/ws": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/typescript-estree": "^2.3.0",
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-e2e-cypress": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
@@ -67,10 +67,11 @@
     "prettier": "^1.18.2",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "ts-essentials": "^3.0.2",
     "ts-jest": "^23.0.0",
     "typedoc": "^0.15.0",
     "typedoc-plugin-markdown": "^2.1.4",
-    "typescript": "^3.6.1-rc",
+    "typescript": "^3.6.3",
     "vue-cli-plugin-vuetify": "^0.6.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
