--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@types/splitpanes": "^1.0.0",
-    "@types/vuelidate": "^0.7.5",
+    "@typescript-eslint/parser": "^2.3.0",
     "ag-grid-community": "^21.1.0",
     "ag-grid-enterprise": "^21.1.0",
     "ag-grid-vue": "^21.1.0",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
-    "apollo-link": "^1.2.12",
-    "apollo-link-http": "^1.5.15",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.18",
     "apollo-utilities": "^1.3.2",
     "core-js": "^2.6.5",
@@ -27,7 +26,6 @@
     "lodash": "^4.17.14",
     "node-fetch": "^2.6.0",
     "proxy-agent": "^3.1.0",
-    "splitpanes": "^1.14.5",
     "subscriptions-transport-ws": "^0.9.16",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
@@ -59,7 +57,7 @@
     "babel-eslint": "^10.0.2",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.1.0",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
