feat(version 1): lots of change

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "baseUrl": ".",
     "types": [
       "webpack-env",
@@ -44,6 +44,6 @@
     "mode": "modules",
     "out": "docs",
     "ignoreCompilerErrors": true,
-    "excludeExternals": true,
+    "excludeExternals": true
   }
 }
