--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.18",
     "apollo-utilities": "^1.3.2",
@@ -24,6 +25,7 @@
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.14",
+    "lodash.omit": "^4.5.0",
     "node-fetch": "^2.6.0",
     "proxy-agent": "^3.1.0",
     "subscriptions-transport-ws": "^0.9.16",
