--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^2.3.0",
+    "@typescript-eslint/parser": "^2.4.0",
     "ag-grid-community": "^21.1.0",
     "ag-grid-enterprise": "^21.1.0",
     "ag-grid-vue": "^21.1.0",
@@ -21,7 +21,7 @@
     "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.18",
     "apollo-utilities": "^1.3.2",
-    "core-js": "^2.6.5",
+    "core-js": "^3.1.2",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.14",
@@ -34,9 +34,9 @@
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuelidate": "^0.7.4",
-    "vuetify": "^2.0.0",
+    "vuetify": "^2.1.5",
     "vuex": "^3.0.1",
-    "vuex-simple": "^2.1.1"
+    "vuex-simple": "^2.2.0"
   },
   "devDependencies": {
     "@types/graphql": "^14.2.3",
@@ -44,13 +44,13 @@
     "@types/lodash": "^4.14.136",
     "@types/ws": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/typescript-estree": "^2.3.0",
-    "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-plugin-e2e-cypress": "^3.10.0",
-    "@vue/cli-plugin-eslint": "^3.10.0",
-    "@vue/cli-plugin-typescript": "^3.10.0",
-    "@vue/cli-plugin-unit-jest": "^3.10.0",
-    "@vue/cli-service": "^3.12.1",
+    "@typescript-eslint/typescript-estree": "^2.4.0",
+    "@vue/cli-plugin-babel": "^4.0.4",
+    "@vue/cli-plugin-e2e-cypress": "^4.0.4",
+    "@vue/cli-plugin-eslint": "^4.0.4",
+    "@vue/cli-plugin-typescript": "^4.0.4",
+    "@vue/cli-plugin-unit-jest": "^4.0.4",
+    "@vue/cli-service": "^4.0.4",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
@@ -70,7 +70,7 @@
     "ts-jest": "^23.0.0",
     "typedoc": "^0.15.0",
     "typedoc-plugin-markdown": "^2.1.4",
-    "typescript": "^3.6.3",
+    "typescript": "^3.7.0-beta",
     "vue-cli-plugin-vuetify": "^1.1.0",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
