--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "subscriptions-transport-ws": "^0.9.16",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-notification": "^1.3.16",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
+    "vue-toastification": "^0.2.0",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.1.5",
     "vuex": "^3.0.1",
