chore: removed sendgrid

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,19 +10,16 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
+    "noImplicitAny": false,
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
       "webpack-env",
-      "jest"
     ],
     "paths": {
       "@/*": [
         "src/*"
       ],
-      "#/*": [
-        "*"
-      ]
     },
     "lib": [
       "esnext",
