--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,10 @@
 name: Node CI
 
-on: [push]
+on: 
+  push:
+    branches: 
+      - '*'
+      - '!master'
 
 jobs:
   build:
@@ -22,5 +26,12 @@ jobs:
         npm install
         npm run build --if-present
         npm test
+    - name: executing remote ssh commands using ssh key
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.KEY }}
+        script: sudo docker 
       env:
         CI: true
