--- a/package.json
+++ b/package.json
@@ -1,78 +1,54 @@
 {
-  "name": "tw-webapp",
+  "name": "nobabelatall",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^2.4.0",
-    "ag-grid-community": "^21.1.0",
+    "ag-grid-community": "^21.2.2",
     "ag-grid-enterprise": "^21.2.2",
     "ag-grid-vue": "^21.2.2",
-    "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.3",
-    "apollo-link": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-http": "^1.5.16",
-    "apollo-link-ws": "^1.0.18",
-    "apollo-utilities": "^1.3.2",
-    "core-js": "^3.1.2",
-    "graphql": "^14.4.2",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
-    "lodash": "^4.17.14",
-    "lodash.omit": "^4.5.0",
-    "node-fetch": "^2.6.0",
-    "proxy-agent": "^3.1.1",
+    "lodash": "^4.17.15",
     "subscriptions-transport-ws": "^0.9.16",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-notification": "^1.3.16",
-    "vue-property-decorator": "^8.1.0",
-    "vue-router": "^3.0.3",
-    "vue-toastification": "^0.2.2",
-    "vuelidate": "^0.7.4",
-    "vuetify": "^2.1.5",
+    "vue-property-decorator": "^8.3.0",
+    "vue-toastification": "^0.3.0",
+    "vuetify": "^2.1.0",
     "vuex": "^3.0.1",
     "vuex-simple": "^2.2.0"
   },
   "devDependencies": {
-    "@types/graphql": "^14.2.3",
-    "@types/jest": "^23.1.4",
-    "@types/lodash": "^4.14.136",
+    "@types/graphql": "^14.5.0",
+    "@types/lodash": "^4.14.144",
     "@types/ws": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/typescript-estree": "^2.4.0",
-    "@vue/cli-plugin-babel": "^4.0.4",
-    "@vue/cli-plugin-e2e-cypress": "^4.0.4",
-    "@vue/cli-plugin-eslint": "^4.0.4",
-    "@vue/cli-plugin-typescript": "^4.0.4",
-    "@vue/cli-plugin-unit-jest": "^4.0.4",
-    "@vue/cli-service": "^4.0.4",
-    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
+    "@typescript-eslint/typescript-estree": "^2.6.0",
+    "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/cli-plugin-router": "^4.0.5",
+    "@vue/cli-plugin-typescript": "^4.0.0",
+    "@vue/cli-plugin-vuex": "^4.0.5",
+    "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.2",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "prettier": "^1.18.2",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
-    "ts-essentials": "^3.0.2",
-    "ts-jest": "^23.0.0",
-    "typescript": "^3.7.0-beta",
-    "vue-cli-plugin-vuetify": "^1.1.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^5.0.0",
+    "prettier": "github:prettier/prettier",
+    "sass": "^1.23.1",
+    "sass-loader": "^8.0.0",
+    "ts-essentials": "^3.0.3",
+    "typescript": "^3.7.1-rc",
+    "vue-cli-plugin-vuetify": "^1.1.1",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2"
+    "vuetify-loader": "^1.3.0"
   }
 }
