--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ag-grid-vue": "^21.2.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
+    "apollo-link-ws": "^1.0.19",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.15",
@@ -20,6 +21,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
+    "vue-router": "^3.1.3",
     "vue-toastification": "^0.3.0",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1",
