--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,5 +25,17 @@ jobs:
         npm install
         npm run build --if-present
         npm test
+        zip -r release.zip ./dist
       env:
         CI: true
+    
+    - name: set environment
+      run: |
+        echo ::set-env name=RELEASE_TAG::$(date '+%Y.%m.%d-%H.%M.%S')
+        echo $RELEASE_TAG
+      
+    - name: Create & Upload Release
+      uses: meeDamian/github-release@1.0
+      with:
+        token: ${{secrets.GITHUB_TOKEN}}
+        files: ./release.zip
