--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "sass": "^1.23.1",
     "sass-loader": "^8.0.0",
     "ts-essentials": "^3.0.3",
-    "typescript": "^3.7.1-rc",
+    "typescript": "^3.7.2",
     "vue-cli-plugin-vuetify": "^1.1.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
