--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Create .env file
+      run: |
+        touch .env
+        printf "VUE_APP_API=${{secrets.VUE_APP_API}}" >> .env
+        printf "VUE_APP_URL= ${{secrets.VUE_APP_URL}}" >> .env
+        cat .env
     - name: npm install, build, and test
       run: |
         npm install
@@ -28,8 +34,6 @@ jobs:
         zip -r release.zip ./dist
       env:
         CI: true
-        VUE_APP_API: ${{secrets.VUE_APP_API}}
-        VUE_APP_URL: ${{secrets.VUE_APP_URL}}
     
     - name: set environment
       run: |
