--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Create .env file
       run: |
         touch .env
-        printf "VUE_APP_API=${{secrets.VUE_APP_API}}" >> .env
-        printf "VUE_APP_URL= ${{secrets.VUE_APP_URL}}" >> .env
+        printf "VUE_APP_API=${{secrets.VUE_APP_API}}\n" >> .env
+        printf "VUE_APP_URL= ${{secrets.VUE_APP_URL}}\n" >> .env
         cat .env
     - name: npm install, build, and test
       run: |
