--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,15 +4,13 @@ on:
   push:
     branches: 
       - '*'
-
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [8.x, 10.x]
+        node-version: [12.x]
 
     steps:
     - uses: actions/checkout@v1
