--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,7 @@ jobs:
         touch .env
         printf "VUE_APP_API=${{secrets.VUE_APP_API}}\n" >> .env
         printf "VUE_APP_URL=${{secrets.VUE_APP_URL}}\n" >> .env
+        cat .env
     - name: npm install, build, and test
       run: |
         npm install
