--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.7.1",
+    "@types/vuelidate": "^0.7.9",
     "ag-grid-community": "^21.2.2",
     "ag-grid-enterprise": "^21.2.2",
     "ag-grid-vue": "^21.2.2",
@@ -18,6 +19,7 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.15",
+    "prettier": "^1.19.1",
     "splitpanes": "^2.0.0",
     "subscriptions-transport-ws": "^0.9.16",
     "vue": "^2.6.10",
@@ -25,6 +27,7 @@
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vue-toastification": "^0.3.0",
+    "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1",
     "vuex-simple": "^2.2.0"
@@ -46,7 +49,6 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
-    "prettier": "github:prettier/prettier",
     "sass": "^1.23.1",
     "sass-loader": "^8.0.0",
     "ts-essentials": "^3.0.3",
