--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
   "trailingComma": "all",
   "tabWidth": 2,
-  "semi":true,
-  "singleQuote":true,
+  "semi": true,
+  "singleQuote": true,
   "arrowParens": "always",
   "printWidth": 80,
-  "endOfLine": "lf",
-  "htmlWhitespaceSensitivity": "ignore"
+  "endOfLine": "lf"
 }
