--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "@sentry/browser": "^5.7.1",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^24.0.23",
     "@types/lodash": "^4.14.144",
     "@types/ws": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
@@ -49,11 +51,14 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "jest": "^24.9.0",
     "sass": "^1.23.1",
     "sass-loader": "^8.0.0",
     "ts-essentials": "^3.0.3",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.7.2",
     "vue-cli-plugin-vuetify": "^1.1.1",
+    "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   }
