--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ag-grid-community/vue": "^22.0.0",
     "@ag-grid-enterprise/all-modules": "^22.0.0",
+    "@sweetalert2/theme-material-ui": "^3.0.5",
     "ag-grid-vue": "^22.0.0",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
@@ -22,10 +23,12 @@
     "lodash": "^4.17.15",
     "splitpanes": "^2.0.0",
     "subscriptions-transport-ws": "^0.9.16",
+    "sweetalert2": "^9.4.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
+    "vue-sweetalert2": "^2.1.5",
     "vue-toastification": "^0.5.1",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
