--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "ag-grid-vue": "^22.0.0",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.2",
     "core-js": "^3.3.2",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
